--- a/Arman.ipynb
+++ b/Arman.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -66,13 +66,16 @@
    ],
    "source": [
     "#Fonction adresse --> coordonées https://geopy.readthedocs.io/en/stable/\n",
-    "\n",
     "from geopy.geocoders import Nominatim\n",
-    "geolocator = Nominatim(user_agent=\"Projet Python\")\n",
-    "location = geolocator.geocode(\"1 rue d'Arsonval, Orsay, France\")\n",
-    "print(location.address)\n",
-    "print((location.latitude, location.longitude))\n",
-    "print(location.raw)"
+    "\n",
+    "\n",
+    "def Adresse_to_gps(Adresse) :\n",
+    "    geolocator = Nominatim(user_agent=\"Projet Python\")\n",
+    "    location = geolocator.geocode(Adresse)\n",
+    "    return location.address\n",
+    "\n",
+    "\n",
+    "print(Adresse_to_gps(\"1 rue d'Arsonval, Orsay, France\"))\n"
    ]
   },
   {
