Bonne version, erratum²

--- a/Arman.ipynb
+++ b/Arman.ipynb
@@ -69,13 +69,14 @@
     "from geopy.geocoders import Nominatim\n",
     "\n",
     "\n",
-    "def Adresse_to_gps(Adresse) :\n",
+    "def Adresse_to_gps(Adresse) : \n",
+    "\n",
     "    geolocator = Nominatim(user_agent=\"Projet Python\")\n",
     "    location = geolocator.geocode(Adresse)\n",
-    "    return location.address\n",
+    "    return location.latitude, location.longitude\n",
     "\n",
     "\n",
-    "print(Adresse_to_gps(\"1 rue d'Arsonval, Orsay, France\"))\n"
+    "print(Adresse_to_gps(\"1 rue d'Arsonval, Orsay, France'))\n"
    ]
   },
   {
