deuxième version du code

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "[9390 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,6 +265,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'48.7087952,2.1742033'"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from geopy.geocoders import Nominatim\n",
+    "\n",
+    "\n",
+    "def Adresse_to_gps(Adresse) : \n",
+    "\n",
+    "    geolocator = Nominatim(user_agent=\"Projet Python\")\n",
+    "    location = geolocator.geocode(Adresse)\n",
+    "    return str(str(location.latitude) + ','+ str(location.longitude))\n",
+    "\n",
+    "\n",
+    "Adresse_to_gps(\"1 rue d'Arsonval, Orsay, France\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -274,13 +304,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dix_plus_proche_card(df, posi, carb):\n",
     "    data_1 = data_carb(df, carb).sort_values('prix_valeur')\n",
-    "    pos = list(map(float,posi.split(',')))\n",
+    "    pos = list(map(float,Adresse_to_gps(posi).split(',')))\n",
     "    def distancetoposi(p2):\n",
     "        pos_carb = list(map(float, p2.split(',')))\n",
     "        return distance1(pos, pos_carb)\n",
@@ -294,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -327,83 +357,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13983</th>\n",
-       "      <td>Lieu-Dit la Maison Rouge</td>\n",
-       "      <td>SAINT-JEAN-BONNEFONDS</td>\n",
-       "      <td>45.443,4.462</td>\n",
-       "      <td>1.819</td>\n",
+       "      <th>68902</th>\n",
+       "      <td>Route de Longjumeau</td>\n",
+       "      <td>CHILLY-MAZARIN</td>\n",
+       "      <td>48.71,2.298</td>\n",
+       "      <td>1.750</td>\n",
        "      <td>E10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2238</th>\n",
-       "      <td>27 Boulevard Fauriat</td>\n",
-       "      <td>Saint-Étienne</td>\n",
-       "      <td>45.446,4.407</td>\n",
-       "      <td>1.839</td>\n",
+       "      <th>55130</th>\n",
+       "      <td>Route de Longjumeau</td>\n",
+       "      <td>CHILLY-MAZARIN</td>\n",
+       "      <td>48.71,2.298</td>\n",
+       "      <td>1.750</td>\n",
        "      <td>E10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4240</th>\n",
-       "      <td>27 Boulevard Fauriat</td>\n",
-       "      <td>Saint-Étienne</td>\n",
-       "      <td>45.446,4.407</td>\n",
-       "      <td>1.839</td>\n",
+       "      <th>76068</th>\n",
+       "      <td>69 Avenue Charles de Gaulle</td>\n",
+       "      <td>MORANGIS</td>\n",
+       "      <td>48.706,2.343</td>\n",
+       "      <td>1.709</td>\n",
        "      <td>E10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>77947</th>\n",
-       "      <td>140 Rue de la Montat, Quartier de Monthieu</td>\n",
-       "      <td>SAINT-ÉTIENNE</td>\n",
-       "      <td>45.442371884059,4.4192750511172</td>\n",
-       "      <td>1.699</td>\n",
+       "      <th>25262</th>\n",
+       "      <td>69 Avenue Charles de Gaulle</td>\n",
+       "      <td>MORANGIS</td>\n",
+       "      <td>48.706,2.343</td>\n",
+       "      <td>1.709</td>\n",
        "      <td>E10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23785</th>\n",
-       "      <td>140 Rue de la Montat, Quartier de Monthieu</td>\n",
-       "      <td>SAINT-ÉTIENNE</td>\n",
-       "      <td>45.442371884059,4.4192750511172</td>\n",
-       "      <td>1.699</td>\n",
+       "      <th>13691</th>\n",
+       "      <td>38 AV DE MORANGIS</td>\n",
+       "      <td>ATHIS MONS</td>\n",
+       "      <td>48.706,2.369</td>\n",
+       "      <td>1.859</td>\n",
        "      <td>E10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36484</th>\n",
-       "      <td>La Varizelle</td>\n",
-       "      <td>Saint-Chamond</td>\n",
-       "      <td>45.462,4.493</td>\n",
-       "      <td>1.699</td>\n",
+       "      <th>41567</th>\n",
+       "      <td>CHEMIN DE BRIIS CD 59</td>\n",
+       "      <td>Villebon-sur-Yvette</td>\n",
+       "      <td>48.7046,2.25396</td>\n",
+       "      <td>1.659</td>\n",
        "      <td>E10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50052</th>\n",
-       "      <td>La Varizelle</td>\n",
-       "      <td>Saint-Chamond</td>\n",
-       "      <td>45.462,4.493</td>\n",
-       "      <td>1.699</td>\n",
+       "      <th>28596</th>\n",
+       "      <td>CHEMIN DE BRIIS CD 59</td>\n",
+       "      <td>Villebon-sur-Yvette</td>\n",
+       "      <td>48.7046,2.25396</td>\n",
+       "      <td>1.659</td>\n",
        "      <td>E10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13952</th>\n",
-       "      <td>100 RUE DE LA MONTAT</td>\n",
-       "      <td>Saint-Étienne</td>\n",
-       "      <td>45.44232,4.40992</td>\n",
-       "      <td>1.652</td>\n",
+       "      <th>45188</th>\n",
+       "      <td>CHEMIN DE BRIIS CD 59</td>\n",
+       "      <td>Villebon-sur-Yvette</td>\n",
+       "      <td>48.7046,2.25396</td>\n",
+       "      <td>1.659</td>\n",
        "      <td>E10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29860</th>\n",
-       "      <td>50 BD NORMANDIE NIEMEN</td>\n",
-       "      <td>Saint-Étienne</td>\n",
-       "      <td>45.437398103719,4.4109830690643</td>\n",
-       "      <td>1.699</td>\n",
+       "      <th>41573</th>\n",
+       "      <td>180 ROUTE NATIONALE 7</td>\n",
+       "      <td>ATHIS-MONS</td>\n",
+       "      <td>48.712,2.371</td>\n",
+       "      <td>1.656</td>\n",
        "      <td>E10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18956</th>\n",
-       "      <td>11 AV DE VERDUN</td>\n",
-       "      <td>Saint-Étienne</td>\n",
-       "      <td>45.46519,4.37809</td>\n",
-       "      <td>1.652</td>\n",
+       "      <th>61582</th>\n",
+       "      <td>RUE DE LONGJUMEAU RUE AMPERE</td>\n",
+       "      <td>Chilly-Mazarin</td>\n",
+       "      <td>48.713,2.298</td>\n",
+       "      <td>1.889</td>\n",
        "      <td>E10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -411,38 +441,38 @@
        "</div>"
       ],
       "text/plain": [
-       "                                          adresse                  ville  \\\n",
-       "13983                    Lieu-Dit la Maison Rouge  SAINT-JEAN-BONNEFONDS   \n",
-       "2238                         27 Boulevard Fauriat          Saint-Étienne   \n",
-       "4240                         27 Boulevard Fauriat          Saint-Étienne   \n",
-       "77947  140 Rue de la Montat, Quartier de Monthieu          SAINT-ÉTIENNE   \n",
-       "23785  140 Rue de la Montat, Quartier de Monthieu          SAINT-ÉTIENNE   \n",
-       "36484                                La Varizelle          Saint-Chamond   \n",
-       "50052                                La Varizelle          Saint-Chamond   \n",
-       "13952                        100 RUE DE LA MONTAT          Saint-Étienne   \n",
-       "29860                      50 BD NORMANDIE NIEMEN          Saint-Étienne   \n",
-       "18956                             11 AV DE VERDUN          Saint-Étienne   \n",
+       "                            adresse                ville             geom  \\\n",
+       "68902           Route de Longjumeau       CHILLY-MAZARIN      48.71,2.298   \n",
+       "55130           Route de Longjumeau       CHILLY-MAZARIN      48.71,2.298   \n",
+       "76068   69 Avenue Charles de Gaulle             MORANGIS     48.706,2.343   \n",
+       "25262   69 Avenue Charles de Gaulle             MORANGIS     48.706,2.343   \n",
+       "13691             38 AV DE MORANGIS           ATHIS MONS     48.706,2.369   \n",
+       "41567         CHEMIN DE BRIIS CD 59  Villebon-sur-Yvette  48.7046,2.25396   \n",
+       "28596         CHEMIN DE BRIIS CD 59  Villebon-sur-Yvette  48.7046,2.25396   \n",
+       "45188         CHEMIN DE BRIIS CD 59  Villebon-sur-Yvette  48.7046,2.25396   \n",
+       "41573         180 ROUTE NATIONALE 7           ATHIS-MONS     48.712,2.371   \n",
+       "61582  RUE DE LONGJUMEAU RUE AMPERE       Chilly-Mazarin     48.713,2.298   \n",
        "\n",
-       "                                  geom  prix_valeur prix_nom  \n",
-       "13983                     45.443,4.462        1.819      E10  \n",
-       "2238                      45.446,4.407        1.839      E10  \n",
-       "4240                      45.446,4.407        1.839      E10  \n",
-       "77947  45.442371884059,4.4192750511172        1.699      E10  \n",
-       "23785  45.442371884059,4.4192750511172        1.699      E10  \n",
-       "36484                     45.462,4.493        1.699      E10  \n",
-       "50052                     45.462,4.493        1.699      E10  \n",
-       "13952                 45.44232,4.40992        1.652      E10  \n",
-       "29860  45.437398103719,4.4109830690643        1.699      E10  \n",
-       "18956                 45.46519,4.37809        1.652      E10  "
+       "       prix_valeur prix_nom  \n",
+       "68902        1.750      E10  \n",
+       "55130        1.750      E10  \n",
+       "76068        1.709      E10  \n",
+       "25262        1.709      E10  \n",
+       "13691        1.859      E10  \n",
+       "41567        1.659      E10  \n",
+       "28596        1.659      E10  \n",
+       "45188        1.659      E10  \n",
+       "41573        1.656      E10  \n",
+       "61582        1.889      E10  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dix_plus_proche_card(data, '45.45,04.50', 'E10')"
+    "dix_plus_proche_card(data, \"1 rue d'Arsonval, Orsay, France\" , 'E10')"
    ]
   }
  ],
