--- a/intro.ipynb
+++ b/intro.ipynb
@@ -62,8 +62,12 @@
     "def data_carb(df, carb):\n",
     "    data_1 = df[['adresse', 'ville', 'geom', 'prix_valeur', 'prix_nom']]\n",
     "    d = data_1[data_1.prix_nom == carb]\n",
+    "    d=d.drop_duplicates(keep = 'first', inplace=True) \n",
+    "    #df.drop_duplicates(subset =\"'column'\", keep = 'first', inplace=True) si on veut supprimer selon une colonne\n",
+    "\n",
     "    return d\n",
-    "    \n"
+    "\n",
+    "\n"
    ]
   },
   {
