Correction erreur fonction data_carb

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "pd.options.mode.chained_assignment = None  # default='warn'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +37,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,16 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "def data_carb(df, carb):\n",
     "    data_1 = df[['adresse', 'ville', 'geom', 'prix_valeur', 'prix_nom']]\n",
     "    d = data_1[data_1.prix_nom == carb]\n",
-    "    d=d.drop_duplicates(keep = 'first', inplace=True) \n",
+    "    d.drop_duplicates(keep = 'first', inplace=True) \n",
     "    #df.drop_duplicates(subset =\"'column'\", keep = 'first', inplace=True) si on veut supprimer selon une colonne\n",
-    "\n",
     "    return d\n",
     "\n",
     "\n"
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -122,23 +122,7 @@
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>67001</th>\n",
-       "      <td>18 Grande Rue</td>\n",
-       "      <td>DOZULé</td>\n",
-       "      <td>49.231,-0.044</td>\n",
-       "      <td>1.290</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2737</th>\n",
-       "      <td>18 Grande Rue</td>\n",
-       "      <td>DOZULé</td>\n",
-       "      <td>49.231,-0.044</td>\n",
-       "      <td>1.290</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38557</th>\n",
        "      <td>18 Grande Rue</td>\n",
        "      <td>DOZULé</td>\n",
        "      <td>49.231,-0.044</td>\n",
@@ -154,6 +138,22 @@
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>10380</th>\n",
+       "      <td>le bourg</td>\n",
+       "      <td>Groléjac</td>\n",
+       "      <td>44.820868467717006,1.2905781261784</td>\n",
+       "      <td>1.473</td>\n",
+       "      <td>SP95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14519</th>\n",
+       "      <td>531 Route de Strasbourg</td>\n",
+       "      <td>VIRIAT</td>\n",
+       "      <td>46.236,5.263</td>\n",
+       "      <td>1.481</td>\n",
+       "      <td>SP95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -162,27 +162,27 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46107</th>\n",
+       "      <th>8063</th>\n",
+       "      <td>23 Boulevard Victor Hugo</td>\n",
+       "      <td>Saint-Ouen</td>\n",
+       "      <td>48.911,2.332</td>\n",
+       "      <td>2.290</td>\n",
+       "      <td>SP95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24100</th>\n",
+       "      <td>8,10,10bis Rue Bailleul</td>\n",
+       "      <td>PARIS</td>\n",
+       "      <td>48.861,2.341</td>\n",
+       "      <td>2.370</td>\n",
+       "      <td>SP95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11249</th>\n",
        "      <td>15 Avenue Duquesne</td>\n",
        "      <td>PARIS</td>\n",
        "      <td>48.853,2.308</td>\n",
        "      <td>2.600</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53592</th>\n",
-       "      <td>69 Avenue Kléber</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>48.865,2.289</td>\n",
-       "      <td>2.690</td>\n",
-       "      <td>SP95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58108</th>\n",
-       "      <td>69 Avenue Kléber</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>48.865,2.289</td>\n",
-       "      <td>2.690</td>\n",
        "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -203,40 +203,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9390 rows × 5 columns</p>\n",
+       "<p>3758 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         adresse                   ville             geom  \\\n",
-       "2601   Avenue de l'Orme à Martin           Courcouronnes     48.631,2.417   \n",
-       "67001              18 Grande Rue                  DOZULé    49.231,-0.044   \n",
-       "2737               18 Grande Rue                  DOZULé    49.231,-0.044   \n",
-       "38557              18 Grande Rue                  DOZULé    49.231,-0.044   \n",
-       "65471           13 Avenue Ampère  MONTIGNY-LE-BRETONNEUX     48.798,2.048   \n",
-       "...                          ...                     ...              ...   \n",
-       "46107         15 Avenue Duquesne                   PARIS     48.853,2.308   \n",
-       "53592           69 Avenue Kléber                   Paris     48.865,2.289   \n",
-       "58108           69 Avenue Kléber                   Paris     48.865,2.289   \n",
-       "43085           69 Avenue Kléber                   Paris     48.865,2.289   \n",
-       "64399    175 Avenue Ledru-Rollin                   PARIS  48.85667,2.3791   \n",
+       "                         adresse                   ville  \\\n",
+       "2601   Avenue de l'Orme à Martin           Courcouronnes   \n",
+       "2737               18 Grande Rue                  DOZULé   \n",
+       "65471           13 Avenue Ampère  MONTIGNY-LE-BRETONNEUX   \n",
+       "10380                   le bourg                Groléjac   \n",
+       "14519    531 Route de Strasbourg                  VIRIAT   \n",
+       "...                          ...                     ...   \n",
+       "8063    23 Boulevard Victor Hugo              Saint-Ouen   \n",
+       "24100    8,10,10bis Rue Bailleul                   PARIS   \n",
+       "11249         15 Avenue Duquesne                   PARIS   \n",
+       "43085           69 Avenue Kléber                   Paris   \n",
+       "64399    175 Avenue Ledru-Rollin                   PARIS   \n",
        "\n",
-       "       prix_valeur prix_nom  \n",
-       "2601         1.169     SP95  \n",
-       "67001        1.290     SP95  \n",
-       "2737         1.290     SP95  \n",
-       "38557        1.290     SP95  \n",
-       "65471        1.423     SP95  \n",
-       "...            ...      ...  \n",
-       "46107        2.600     SP95  \n",
-       "53592        2.690     SP95  \n",
-       "58108        2.690     SP95  \n",
-       "43085        2.690     SP95  \n",
-       "64399        2.900     SP95  \n",
+       "                                     geom  prix_valeur prix_nom  \n",
+       "2601                         48.631,2.417        1.169     SP95  \n",
+       "2737                        49.231,-0.044        1.290     SP95  \n",
+       "65471                        48.798,2.048        1.423     SP95  \n",
+       "10380  44.820868467717006,1.2905781261784        1.473     SP95  \n",
+       "14519                        46.236,5.263        1.481     SP95  \n",
+       "...                                   ...          ...      ...  \n",
+       "8063                         48.911,2.332        2.290     SP95  \n",
+       "24100                        48.861,2.341        2.370     SP95  \n",
+       "11249                        48.853,2.308        2.600     SP95  \n",
+       "43085                        48.865,2.289        2.690     SP95  \n",
+       "64399                     48.85667,2.3791        2.900     SP95  \n",
        "\n",
-       "[9390 rows x 5 columns]"
+       "[3758 rows x 5 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "'48.7087952,2.1742033'"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -361,122 +361,122 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>68902</th>\n",
-       "      <td>Route de Longjumeau</td>\n",
-       "      <td>CHILLY-MAZARIN</td>\n",
-       "      <td>48.71,2.298</td>\n",
-       "      <td>1.750</td>\n",
-       "      <td>E10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55130</th>\n",
-       "      <td>Route de Longjumeau</td>\n",
-       "      <td>CHILLY-MAZARIN</td>\n",
-       "      <td>48.71,2.298</td>\n",
-       "      <td>1.750</td>\n",
-       "      <td>E10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76068</th>\n",
+       "      <th>18723</th>\n",
        "      <td>69 Avenue Charles de Gaulle</td>\n",
        "      <td>MORANGIS</td>\n",
        "      <td>48.706,2.343</td>\n",
-       "      <td>1.709</td>\n",
-       "      <td>E10</td>\n",
+       "      <td>1.759</td>\n",
+       "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25262</th>\n",
-       "      <td>69 Avenue Charles de Gaulle</td>\n",
-       "      <td>MORANGIS</td>\n",
-       "      <td>48.706,2.343</td>\n",
-       "      <td>1.709</td>\n",
-       "      <td>E10</td>\n",
+       "      <th>43435</th>\n",
+       "      <td>Rue de la Ballastière</td>\n",
+       "      <td>Ligny-en-Barrois</td>\n",
+       "      <td>48.677,5.326</td>\n",
+       "      <td>1.700</td>\n",
+       "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13691</th>\n",
-       "      <td>38 AV DE MORANGIS</td>\n",
-       "      <td>ATHIS MONS</td>\n",
-       "      <td>48.706,2.369</td>\n",
-       "      <td>1.859</td>\n",
-       "      <td>E10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41567</th>\n",
-       "      <td>CHEMIN DE BRIIS CD 59</td>\n",
-       "      <td>Villebon-sur-Yvette</td>\n",
-       "      <td>48.7046,2.25396</td>\n",
-       "      <td>1.659</td>\n",
-       "      <td>E10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28596</th>\n",
-       "      <td>CHEMIN DE BRIIS CD 59</td>\n",
-       "      <td>Villebon-sur-Yvette</td>\n",
-       "      <td>48.7046,2.25396</td>\n",
-       "      <td>1.659</td>\n",
-       "      <td>E10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45188</th>\n",
-       "      <td>CHEMIN DE BRIIS CD 59</td>\n",
-       "      <td>Villebon-sur-Yvette</td>\n",
-       "      <td>48.7046,2.25396</td>\n",
-       "      <td>1.659</td>\n",
-       "      <td>E10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41573</th>\n",
+       "      <th>38126</th>\n",
        "      <td>180 ROUTE NATIONALE 7</td>\n",
        "      <td>ATHIS-MONS</td>\n",
        "      <td>48.712,2.371</td>\n",
-       "      <td>1.656</td>\n",
-       "      <td>E10</td>\n",
+       "      <td>1.709</td>\n",
+       "      <td>SP95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>61582</th>\n",
-       "      <td>RUE DE LONGJUMEAU RUE AMPERE</td>\n",
-       "      <td>Chilly-Mazarin</td>\n",
-       "      <td>48.713,2.298</td>\n",
-       "      <td>1.889</td>\n",
-       "      <td>E10</td>\n",
+       "      <th>50277</th>\n",
+       "      <td>KERGUENNEC</td>\n",
+       "      <td>ROSCOFF</td>\n",
+       "      <td>48.71344,-3.98569</td>\n",
+       "      <td>1.750</td>\n",
+       "      <td>SP95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5332</th>\n",
+       "      <td>lieudit le village</td>\n",
+       "      <td>Les Essarts-le-Roi</td>\n",
+       "      <td>48.71419,1.92645</td>\n",
+       "      <td>1.745</td>\n",
+       "      <td>SP95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10514</th>\n",
+       "      <td>RUE DU GENERAL DE GAULLE</td>\n",
+       "      <td>AVRANCHES</td>\n",
+       "      <td>48.68647,-1.36356</td>\n",
+       "      <td>1.819</td>\n",
+       "      <td>SP95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46246</th>\n",
+       "      <td>PLACE DE BEAUPLAN</td>\n",
+       "      <td>SAINT-RéMY-LèS-CHEVREUSE</td>\n",
+       "      <td>48.716,2.085</td>\n",
+       "      <td>1.737</td>\n",
+       "      <td>SP95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18710</th>\n",
+       "      <td>72 Avenue Jean Jaurès</td>\n",
+       "      <td>Montgeron</td>\n",
+       "      <td>48.716,2.446</td>\n",
+       "      <td>1.770</td>\n",
+       "      <td>SP95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13697</th>\n",
+       "      <td>118 Rue de la Passerelle</td>\n",
+       "      <td>CHILLY-MAZARIN</td>\n",
+       "      <td>48.69943,2.32057</td>\n",
+       "      <td>1.799</td>\n",
+       "      <td>SP95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18347</th>\n",
+       "      <td>120A ROUTE NATIONALE</td>\n",
+       "      <td>GAMBSHEIM</td>\n",
+       "      <td>48.699248714218,7.889266294415299</td>\n",
+       "      <td>1.589</td>\n",
+       "      <td>SP95</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            adresse                ville             geom  \\\n",
-       "68902           Route de Longjumeau       CHILLY-MAZARIN      48.71,2.298   \n",
-       "55130           Route de Longjumeau       CHILLY-MAZARIN      48.71,2.298   \n",
-       "76068   69 Avenue Charles de Gaulle             MORANGIS     48.706,2.343   \n",
-       "25262   69 Avenue Charles de Gaulle             MORANGIS     48.706,2.343   \n",
-       "13691             38 AV DE MORANGIS           ATHIS MONS     48.706,2.369   \n",
-       "41567         CHEMIN DE BRIIS CD 59  Villebon-sur-Yvette  48.7046,2.25396   \n",
-       "28596         CHEMIN DE BRIIS CD 59  Villebon-sur-Yvette  48.7046,2.25396   \n",
-       "45188         CHEMIN DE BRIIS CD 59  Villebon-sur-Yvette  48.7046,2.25396   \n",
-       "41573         180 ROUTE NATIONALE 7           ATHIS-MONS     48.712,2.371   \n",
-       "61582  RUE DE LONGJUMEAU RUE AMPERE       Chilly-Mazarin     48.713,2.298   \n",
+       "                           adresse                     ville  \\\n",
+       "18723  69 Avenue Charles de Gaulle                  MORANGIS   \n",
+       "43435        Rue de la Ballastière          Ligny-en-Barrois   \n",
+       "38126        180 ROUTE NATIONALE 7                ATHIS-MONS   \n",
+       "50277                   KERGUENNEC                   ROSCOFF   \n",
+       "5332            lieudit le village        Les Essarts-le-Roi   \n",
+       "10514     RUE DU GENERAL DE GAULLE                 AVRANCHES   \n",
+       "46246            PLACE DE BEAUPLAN  SAINT-RéMY-LèS-CHEVREUSE   \n",
+       "18710        72 Avenue Jean Jaurès                 Montgeron   \n",
+       "13697     118 Rue de la Passerelle            CHILLY-MAZARIN   \n",
+       "18347         120A ROUTE NATIONALE                 GAMBSHEIM   \n",
        "\n",
-       "       prix_valeur prix_nom  \n",
-       "68902        1.750      E10  \n",
-       "55130        1.750      E10  \n",
-       "76068        1.709      E10  \n",
-       "25262        1.709      E10  \n",
-       "13691        1.859      E10  \n",
-       "41567        1.659      E10  \n",
-       "28596        1.659      E10  \n",
-       "45188        1.659      E10  \n",
-       "41573        1.656      E10  \n",
-       "61582        1.889      E10  "
+       "                                    geom  prix_valeur prix_nom  \n",
+       "18723                       48.706,2.343        1.759     SP95  \n",
+       "43435                       48.677,5.326        1.700     SP95  \n",
+       "38126                       48.712,2.371        1.709     SP95  \n",
+       "50277                  48.71344,-3.98569        1.750     SP95  \n",
+       "5332                    48.71419,1.92645        1.745     SP95  \n",
+       "10514                  48.68647,-1.36356        1.819     SP95  \n",
+       "46246                       48.716,2.085        1.737     SP95  \n",
+       "18710                       48.716,2.446        1.770     SP95  \n",
+       "13697                   48.69943,2.32057        1.799     SP95  \n",
+       "18347  48.699248714218,7.889266294415299        1.589     SP95  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dix_plus_proche_card(data, \"1 rue d'Arsonval, Orsay, France\" , 'E10')"
+    "dix_plus_proche_card(data, \"1 rue d'Arsonval, Orsay, France\" , 'SP95')"
    ]
   }
  ],
